@@ -23,6 +23,7 @@ remove = strict
 remove = warnings
 remove = base
 remove = File::Temp
+remove = Alien::MSYS
 
 [Prereqs / BuildPrereqs]
 -phase = build
