@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Support for MSYS2 / MinGW
 
 0.07      2017-08-04 06:49:21 -0400
   - Make help2man a no-op instead of touching man files during build
